Main slider mobile spacing fixes

--- a/themes/toppeq/assets/scss/theme/_mainslider.scss
+++ b/themes/toppeq/assets/scss/theme/_mainslider.scss
@@ -18,6 +18,7 @@
       @media (min-width: 1201px) and (max-width: 1350px) {
         max-height: 300px;
       }
+      
     }
     &-text{
       max-width: 617px;
@@ -83,7 +84,10 @@
         display: none;
       }
       @media (max-width: 768px) {
-        left: 25px;
+        left: 15px;
+      }
+      @media (max-width: 767px) {
+        bottom: 65%;
       }
     }
     &-count{
@@ -128,9 +132,20 @@
       }
     }
     &.a{
+      img{
+        @media (max-width: 380px) and ( max-height: 699px ) {
+          max-height: 300px;
+        }
+      }
       .item-text{
         @media (max-width: 767px) {
           bottom: 65%;
+        }
+        @media (width: 320px) and ( height: 568px ) {
+          bottom: 58%;
+        }
+        @media (width: 375px) and ( height: 667px ) {
+          bottom: 46%;
         }
       }
     }
